dotCMS/src/main/webapp/html/css/dijit-dotcms/dotcms.css
/* ... */
.permissionTableTitle,
.permissionTable,
.accordionEntry {
  width: 100%;
}

.permissionTableTitle td, .permissionTableTitle th,
.permissionTable td,
.permissionTable th,
.accordionEntry td,
.accordionEntry th {
  width: 10%;
  text-align: center;
}

.permissionTableTitle td,
.permissionTable td,
.accordionEntry td {
  padding: 4px;
}

.permissionTableTitle th,
.permissionTable th,
.accordionEntry th {
  font-weight: bold;
}

.permissionTableTitle th.permissionType,
.permissionTable th.permissionType,
.accordionEntry th.permissionType {
  width: 40%;
  font-weight: normal;
  padding-left: 8px;
  text-align: left;
}

.permissionTableTitle th.permissionTitle,
.permissionTable th.permissionTitle,
.accordionEntry th.permissionTitle {
  font-weight: bold;
}

#assetPermissionsMessageWrapper {
  padding-top: 15px;
  color: red;
  text-align: center;
  font-weight: bolder;
}

.related-content-dialog {
  background: url("/html/images/backgrounds/relate-content-dia.png") !important;
  background-position: left;
  background-repeat: repeat-y;
  height: 90%;
  width: 90%;
}

.related-content-dialog .dijitDialogPaneContent {
  padding: 0;
}

.related-content-dialog .portlet-sidebar-wrapper {
  width: 200px;
}

.related-content-container {
  height: 100%;
}

.related-content-form {
  width: 100%;
  height: 660px;
}

.related-content-form .portlet-toolbar {
  margin-top: 24px;
}

.context-menu {
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
  position: absolute;
  background: #fff;
  border: 1px solid #ECEDEE;
  min-width: 200px;
}

.context-menu .pop_divider {
  border-bottom: 1px solid #ECEDEE;
  background-color: #fff;
}

.context-menu__item {
  color: #5B5B5B;
  cursor: pointer;
  display: block;
  font-size: 13px;
  height: 36px;
  line-height: 36px;
  padding: 0px 24px;
  position: relative;
  text-decoration: none;
}

.context-menu__item:hover {
  background-color: #FAFAFA;
}

.context-menu__item [class$="Icon"],
.context-menu__item [class*="Icon"] {
  display: none;
}

.context-menu__item .arrowRightIcon {
  font-size: 12px;
  margin-top: -6px;
  position: absolute;
  right: 8px;
  top: 50%;
}

.history .contentIdentifier {
  font-weight: bold;
}

.history .history__divider {
  background-color: #ECEDEE;
  margin: 24px 0;
}

.history .history__status {
  overflow: hidden;
}

.dijitTabPaneWrapper .rules__tab-container .dijitContentPane {
  padding: 0;
}

#iFrameWrapper {
  position: absolute;
  left: 0px;
  right: 0px;
  top: 49px;
  bottom: 0px;
}

#imageToolIframe {
  /*border:1px solid blue;*/
  display: block;
  position: absolute;
  left: 0px;
  right: 0px;
  top: 0px;
  bottom: 0px;
}

.imageToolButtonBar {
  background: #fff;
  border-bottom: 1px solid silver;
  border-top: 1px solid silver;
  margin-width: 0 0px;
  padding: 5px 15px 1px 15px;
  vertical-align: middle;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
}

#imageViewPort {
  overflow: auto;
  margin-top: 5px;
}

#toolBar {
  background: #fff;
  position: absolute;
  bottom: 0px;
  left: 0px;
  right: 0px;
  /*border:1px solid blue;*/
}

#exif {
  clear: both;
  height: 2em;
}

#showScaleSlider {
  margin: 10px auto;
  width: 250px;
  height: 20px;
}

#saveAsDialog {
  width: 350px;
  height: 170px;
}

#saveAsDiaTable {
  margin: auto;
  margin-top: 10px;
}

#saveAsDiaTable td {
  padding: 8px;
}

#saveAsFileExt {
  font-weight: bold;
}

#cropDim {
  display: none;
}

/* part of the widget: drag handle styles */
.imageDragger {
  /* required: */
  position: absolute;
  /* optional: */
  cursor: move;
  z-index: 999;
  background: #fff;
  border: 2px dotted #000;
  min-width: 50px;
  min-height: 50px;
}

#cropSizeBox {
  float: left;
  border: 1px solid silver;
  opacity: 1;
  min-width: 46px;
  height: 20px;
  color: black;
  white-space: nowrap;
}

.textInputClass {
  border: 1px solid silver;
  width: 46px;
  margin: 2px;
  height: 23px;
}

.baseImageDim {
  width: 45px;
  margin: 2px;
  height: 23px;
  overflow: hidden;
  display: inline-block;
  padding-top: 4px;
}

#doCropButton {
  display: none;
}

#filtersUndoDiv {
  text-align: left;
}

#filterListTd {
  vertical-align: top;
  padding: 0px;
}

#filterListBox {
  height: 115px;
  display: block;
}

#filterListDiv {
  width: 115px;
  overflow-y: auto;
  height: 80px;
  overflow-x: hidden;
}

.loader {
  background: url("/html/js/dotcms/dijit/image/loading.gif") no-repeat center center;
}

.filterListItem {
  text-align: left;
  cursor: pointer;
  width: 100px;
  padding: 2px;
  border: 1px solid silver;
  background: url("/html/images/icons/minus-small-circle.png") no-repeat right center;
}

#controlTable {
  width: 100%;
}

#controlTable td {
  border: 1px solid silver;
  padding: 3px;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
}

#showScaleSlider td {
  border: 0px solid silver;
  padding: 0px;
}

#hsbDialog {
  width: 400px;
  height: 300px;
}

#hsbTable {
  border: 1px solid silver;
  width: 90%;
}

#hsbTable td {
  padding: 4px;
  border: 1px solid silver;
  height: 20px;
  vertical-align: top;
}

#hsbTable .colorSlider td {
  padding: 0px;
  border: 0px solid silver;
}

.colorSlider {
  width: 200px;
}

.thumbnailDiv {
  border: solid 2px #ECEDEE;
  box-sizing: content-box;
  cursor: pointer;
  min-height: 120px;
  min-width: 120px;
  padding: 16px;
  position: relative;
}

.thumbnailDivHover {
  border: solid 2px #C5C5C5;
  box-sizing: content-box;
  padding: 16px;
  position: relative;
}

.thumbnailDivHover .editImageText {
  opacity: 1;
}

.editImageText {
  background: white;
  border-radius: 2px;
  border: 1px solid #8A8A8A;
  bottom: 8px;
  cursor: pointer;
  opacity: .50;
  padding: 0 8px;
  height: 36px;
  line-height: 34px;
  position: absolute;
  right: 8px;
}
/* ... */

